Update to 1.19.3
Should be ready for release.