@@ -1,59 +1,49 @@
 package doggytalents.common.data;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import doggytalents.DoggyBlocks;
 import doggytalents.DoggyEntityTypes;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
-import net.minecraft.data.loot.EntityLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.data.loot.EntityLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class DTLootTableProvider extends LootTableProvider {
 
-    public DTLootTableProvider(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
-
-    @Override
-    public String getName() {
-        return "DoggyTalents LootTables";
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(Blocks::new, LootContextParamSets.BLOCK),
-                Pair.of(Entities::new, LootContextParamSets.ENTITY)
-               );
+    public DTLootTableProvider(PackOutput packOutput) {
+        super(packOutput, BuiltInLootTables.all(), List.of(new LootTableProvider.SubProviderEntry(Blocks::new, LootContextParamSets.BLOCK), new LootTableProvider.SubProviderEntry(Entities::new, LootContextParamSets.ENTITY)));
     }
 
     @Override
     protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationTracker) {}
 
-    private static class Blocks extends BlockLoot {
+    private static class Blocks extends BlockLootSubProvider {
+
+        protected Blocks() {
+            super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags());
+        }
 
         @Override
-        protected void addTables() {
+        public void generate() {
             dropsSelf(DoggyBlocks.DOG_BATH);
             dropDogBed(DoggyBlocks.DOG_BED);
             dropsSelf(DoggyBlocks.FOOD_BOWL); // Drop with the name of the dog bowl
@@ -86,10 +76,14 @@ public class DTLootTableProvider extends LootTableProvider {
         }
     }
 
-    private static class Entities extends EntityLoot {
+    private static class Entities extends EntityLootSubProvider {
+
+        protected Entities() {
+            super(FeatureFlags.REGISTRY.allFlags());
+        }
 
         @Override
-        protected void addTables() {
+        public void generate() {
             this.registerNoLoot(DoggyEntityTypes.DOG);
         }
 
@@ -98,8 +92,8 @@ public class DTLootTableProvider extends LootTableProvider {
         }
 
         @Override
-        protected Iterable<EntityType<?>> getKnownEntities() {
-            return DoggyEntityTypes.ENTITIES.getEntries().stream().map(Supplier::get).collect(Collectors.toList());
+        protected Stream<EntityType<?>> getKnownEntityTypes() {
+            return DoggyEntityTypes.ENTITIES.getEntries().stream().map(Supplier::get);
         }
     }
 }
